--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Локализатор долгов</title>
+	<title>Долгоскоп: локализатор долгов</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<header></header>
+	<header>
+        <h1>Долгоскоп</h1>
+		<p>Поиск территорий и отраслей экономики Беларуси с
+		<span class="gray">не</span>благоприятной долговой динамикой</p>
+    </header>
 	<main></main>
 	<footer></footer>
 	<script src="js/d3.v4.min.js"></script>
