Настроить обновление таблицы.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<span class="gray">не</span>благоприятной долговой динамикой</p>
     </header>
 	<main></main>
-	<footer></footer>
+	<footer><p>Источник данных: <a href="http://belstat.gov.by">Белстат</a>.<br>Редактор проекта Алексей Медвецкий, am@opendata.by.<br>Испытательная версия.</p></footer>
 	<script src="js/d3.v4.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
