--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Долгоскоп: локализатор долгов</title>
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<header>
         <h1>Долгоскоп</h1>
-		<p>Поиск территорий и отраслей экономики Беларуси с
+		<p>Поиск территорий и отраслей экономики с
 		<span class="gray">не</span>благоприятной долговой динамикой</p>
     </header>
 	<main></main>
-	<footer><p>Источник данных: <a href="http://belstat.gov.by">Белстат</a>.<br>Редактор проекта Алексей Медвецкий, am@opendata.by.<br>Испытательная версия.</p></footer>
+	<footer><p>Источник данных: <a href="http://belstat.gov.by">Белстат</a>.
+        <br>Редактор проекта Алексей Медвецкий, am@opendata.by.
+        <br>Статус: Прототип.</p></footer>
 	<script src="js/d3.v4.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
