--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Долгоскоп: локализатор долгов</title>
-    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="container">
 	<header>
         <h1>Долгоскоп</h1>
 		<p>Поиск территорий и отраслей экономики с
